# Devops-Course-Starter

./: .env  .env.j2  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  docker-compose.yaml  inventory  main.tf  outputs.tf  playbook.yaml  pyproject.toml  todoapp.service  variables.tf
.github/workflows/: my-ci-pipeline.yml
Documentation/: To Do App - Component Diagram.drawio  To Do App - Container Diagram.drawio  To Do App - Context Diagram.drawio
test_to_do_app/: test_integration.py  test_to_do_app.py
todo_app/: Card.py  Item.py  app.py  flask_config.py  to_do_lists.py  wsgi.py
todo_app/data/: Card.py  getListsFromBoard.py  item_view_model.py  mongoDB.py  roleChecker.py  to_do_list.py  trello_urls.py  updateCard.py  user.py
todo_app/templates/: index.html  item.html
